<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.user.droidcafe.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:title="@string/order"
        android:orderInCategory="10"
        android:icon="@drawable/ic_order_white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/status"
        android:icon="@drawable/ic_status_white"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorites"
        android:title="@string/favorites"
        android:orderInCategory="40"
        android:icon="@drawable/ic_favorites_white"
        app:showAsAction="ifRoom"/>

    <item
        android:id = "@+id/action_settings"
        android:title="@string/settings"
        android:orderInCategory="50"
        app:showAsAction="never"/>


</menu>
