<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.droidcafe.OrderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_intro_text"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="@string/order_intro_text"
        android:textSize="@dimen/intro_textsize"/>
    
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation= "vertical"
        android:layout_below="@id/order_intro_text">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sameday"
            android:text= "@string/sameday"
            android:onClick="onRadioButtonCicked"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextday"
            android:text= "@string/nextday"
            android:onClick="onRadioButtonCicked"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickup"
            android:text= "@string/pickup"
            android:onClick="onRadioButtonCicked"
            />
    </RadioGroup>


</RelativeLayout>
